[package]
name = "graph-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Run `cargo update` to install dependencies
[dependencies]
juniper = "0.15.11"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
